Bump the top padding to avoid printer cutoff

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
     }
   }
   .jumbotron {
-    padding-top: 0;
+    padding-top: 30px;
     padding-bottom: 0;
   }
 }
